fix(style): fix bio center alignment

--- a/modules/blox-tailwind/assets/css/blox/biography.css
+++ b/modules/blox-tailwind/assets/css/blox/biography.css
@@ -53,18 +53,18 @@
     font-size: 0.9rem;
   }
 
- /*.ul-edu {*/
- /*   list-style: none;*/
- /* }*/
+ /* .ul-edu { */
+ /*   list-style: none; */
+ /* } */
 
- /* .ul-edu li {*/
- /*   position: relative;*/
- /*   padding: 0 15px 4px 3px;*/
- /* }*/
+ /* .ul-edu li { */
+ /*   position: relative; */
+ /*   padding: 0 15px 4px 3px; */
+ /* } */
 
- /* .ul-edu li .description p {*/
- /*   margin: 0;*/
- /* }*/
+ /* .ul-edu li .description p { */
+ /*   margin: 0; */
+ /* } */
 
   .ul-edu li .description p.course {
     font-size: 0.9rem;
@@ -80,15 +80,15 @@
     font-size: 1.5rem;
   }
 
-  .dark .portrait-title h3 {
-    color: rgb(255 255 255 / 90%);
-    font-weight: bold;
-  }
+  /* .dark .portrait-title h3 { */
+  /*  color: rgb(255 255 255 / 90%); */
+  /*  font-weight: bold; */
+  /* } */
 
-  .dark .portrait-title h2 {
-    color: #fff;
-    font-weight: bold;
-  }
+  /* .dark .portrait-title h2 { */
+  /*  color: #fff; */
+  /*  font-weight: bold; */
+  /* } */
 
   .bio-text {
     max-width: 680px;
